crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_while_body.snap
---
source: crates/alder-parse/src/statement.rs
description: while ready x
---
While(
    Body(
        Open(
            1,
            13,
        ),
        1,
        13,
    ),
    1,
    1,
)
