crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_while_condition.snap
---
source: crates/alder-parse/src/statement.rs
description: "while ) { }"
---
While(
    Condition(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
