crates/alder-parse/src/snapshots/alder_parse__statement__tests__expr_stmt_if_then_stmt.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    if item.skip { continue }\n    total += item.price\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 30,
                    },
                },
                value: Expr(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 30,
                            },
                        },
                        value: If {
                            branches: [
                                IfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 17,
                                            },
                                        },
                                        value: Access {
                                            record: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 8,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 12,
                                                    },
                                                },
                                                value: Var(
                                                    "item",
                                                ),
                                            },
                                            field: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 13,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 17,
                                                    },
                                                },
                                                value: "skip",
                                            },
                                        },
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 30,
                                            },
                                        },
                                        value: Block {
                                            stmts: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 20,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 28,
                                                        },
                                                    },
                                                    value: Continue,
                                                },
                                            ],
                                            tail: None,
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 24,
                    },
                },
                value: Assign {
                    place: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: Place {
                            root: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 10,
                                    },
                                },
                                value: "total",
                            },
                            steps: [],
                        },
                    },
                    op: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 13,
                            },
                        },
                        value: Add,
                    },
                    value: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 14,
                            },
                            end: Position {
                                line: 3,
                                column: 24,
                            },
                        },
                        value: Access {
                            record: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 14,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 18,
                                    },
                                },
                                value: Var(
                                    "item",
                                ),
                            },
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 24,
                                    },
                                },
                                value: "price",
                            },
                        },
                    },
                },
            },
        ],
        tail: None,
    },
}
