crates/alder-parse/src/snapshots/alder_parse__statement__tests__for_pattern.snap
---
source: crates/alder-parse/src/statement.rs
description: "for (key, value) in pairs { total += value }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 45,
        },
    },
    value: For {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 5,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            value: Tuple {
                first: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var(
                        "key",
                    ),
                },
                second: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: Var(
                        "value",
                    ),
                },
                rest: [],
            },
        },
        iter: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 21,
                },
                end: Position {
                    line: 1,
                    column: 26,
                },
            },
            value: Var(
                "pairs",
            ),
        },
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 27,
                },
                end: Position {
                    line: 1,
                    column: 45,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 29,
                            },
                            end: Position {
                                line: 1,
                                column: 43,
                            },
                        },
                        value: Assign {
                            place: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 29,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 34,
                                    },
                                },
                                value: Place {
                                    root: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 29,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 34,
                                            },
                                        },
                                        value: "total",
                                    },
                                    steps: [],
                                },
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 35,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 37,
                                    },
                                },
                                value: Add,
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 38,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 43,
                                    },
                                },
                                value: Var(
                                    "value",
                                ),
                            },
                        },
                    },
                ],
                tail: None,
            },
        },
    },
}
