crates/alder-parse/src/snapshots/alder_parse__statement__tests__let_count.snap
---
source: crates/alder-parse/src/statement.rs
description: let count = 0
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Let(
        LetDecl {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Var(
                    "count",
                ),
            },
            annotation: None,
            value: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 0.0,
                        text: "0",
                    },
                ),
            },
        },
    ),
}
