crates/alder-parse/src/snapshots/alder_parse__statement__tests__let_multiline_value.snap
---
source: crates/alder-parse/src/statement.rs
description: "let total =\n    compute(items)\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 19,
        },
    },
    value: Let(
        LetDecl {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Var(
                    "total",
                ),
            },
            annotation: None,
            value: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 19,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 12,
                            },
                        },
                        value: Var(
                            "compute",
                        ),
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 13,
                                },
                                end: Position {
                                    line: 2,
                                    column: 18,
                                },
                            },
                            value: Var(
                                "items",
                            ),
                        },
                    ],
                },
            },
        },
    ),
}
